--- a/package.json
+++ b/package.json
@@ -3,37 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "homepage": "https://innerpixel.github.io/space-nexus-defense-comm/",
   "description": "A sci-fi themed communication console with video surveillance and AI assistance",
   "author": "Cosmic Nexus Team",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "prettier --write src/",
     "test": "vitest",
-    "docs": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "test:e2e": "cypress run",
+    "test:unit": "vitest run"
   },
   "dependencies": {
     "@tensorflow/tfjs": "^4.17.0",
     "face-api.js": "^0.22.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5",
-    "axios": "^1.7.9"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
-    "@heroicons/vue": "^2.2.0",
     "@vitejs/plugin-vue": "^5.0.3",
-    "@vue/test-utils": "^2.4.0",
-    "eslint": "^9.18.0",
-    "eslint-plugin-vue": "^9.32.0",
     "vite": "^5.0.11",
     "vite-plugin-vue-devtools": "^7.0.13",
-    "vitepress": "^1.0.0",
+    "@vue/test-utils": "^2.4.0",
+    "cypress": "^13.6.0",
+    "eslint": "^8.49.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "prettier": "^3.0.3",
     "vitest": "^1.2.0"
   },
   "keywords": [
