--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/",
-    "test": "vitest",
-    "test:e2e": "cypress run",
-    "test:unit": "vitest run"
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "@tensorflow/tfjs": "^4.17.0",
@@ -26,12 +23,9 @@
     "@vitejs/plugin-vue": "^5.0.3",
     "vite": "^5.0.11",
     "vite-plugin-vue-devtools": "^7.0.13",
-    "@vue/test-utils": "^2.4.0",
-    "cypress": "^13.6.0",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "prettier": "^3.0.3",
-    "vitest": "^1.2.0"
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.20.1",
+    "prettier": "^3.2.4"
   },
   "keywords": [
     "vue",
